// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders payment errors 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "imageUrl": "",
          "price": "10.00",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "Test Product",
        },
      ],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {},
    }
  }
  order={
    Object {
      "paymentError": "Payment authentication failed",
    }
  }
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="o-checkout-cart-total u-sticky"
    >
      <div
        className="o-checkout-cart-total__wrapper"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Subtotal: 
          </dt>
          <dd>
             £
            20.00
             
          </dd>
        </dl>
        <dl
          aria-label="VAT"
        >
          <dt>
             VAT: 
          </dt>
          <dd>
             £
            0.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping: 
          </dt>
          <dd>
             
            Enter address
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="o-checkout-cart-total__total"
        >
          <dt>
             You Pay: 
          </dt>
          <dd>
             
            <b>
              £
              20.00
            </b>
             
          </dd>
          <div>
            <Button
              aria-label="Place Order"
              disabled={true}
              label="Place Order"
              onClick={undefined}
              size="lrg"
              status="disabled"
              type="button"
            >
              <button
                aria-label="Place Order"
                className="o-button o-button--disabled o-button--lrg o-button--disabled"
                disabled={true}
                onClick={undefined}
                role="button"
                tabIndex="0"
                type="button"
              >
                Place Order
              </button>
            </Button>
          </div>
        </dl>
        <div
          className="c-checkout-cart-total__payment-error"
        >
          Payment authentication failed
        </div>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;

exports[`renders the correct checkout cart costs with shipping address completed 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "price": "10.00",
          "quantity": 2,
          "title": "Test Product",
        },
        Object {
          "discount": 0,
          "price": "5.00",
          "quantity": 1,
          "title": "Pretend Product",
        },
      ],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "completed": true,
      },
      "shippingMethod": Object {},
    }
  }
  order={Object {}}
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="o-checkout-cart-total u-sticky"
    >
      <div
        className="o-checkout-cart-total__wrapper"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Subtotal: 
          </dt>
          <dd>
             £
            25.00
             
          </dd>
        </dl>
        <dl
          aria-label="VAT"
        >
          <dt>
             VAT: 
          </dt>
          <dd>
             £
            0.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping: 
          </dt>
          <dd>
             
            Select shipping method
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="o-checkout-cart-total__total"
        >
          <dt>
             You Pay: 
          </dt>
          <dd>
             
            <b>
              £
              25.00
            </b>
             
          </dd>
          <div>
            <Button
              aria-label="Place Order"
              disabled={true}
              label="Place Order"
              onClick={undefined}
              size="lrg"
              status="disabled"
              type="button"
            >
              <button
                aria-label="Place Order"
                className="o-button o-button--disabled o-button--lrg o-button--disabled"
                disabled={true}
                onClick={undefined}
                role="button"
                tabIndex="0"
                type="button"
              >
                Place Order
              </button>
            </Button>
          </div>
        </dl>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;

exports[`renders the correct checkout cart costs with shipping method selected 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "price": "10.00",
          "quantity": 2,
          "title": "Test Product",
        },
        Object {
          "discount": 0,
          "price": "5.00",
          "quantity": 1,
          "title": "Pretend Product",
        },
      ],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "completed": true,
      },
      "shippingMethod": Object {
        "delivery_date": "Sunday 2nd December",
        "id": "1",
        "name": "Super Saver",
        "paid_price_inc_tax": 3.45,
        "reference": "super_saver",
        "retail_price_inc_tax": 3.45,
        "sku": "super_saver",
        "tax_amount": 2,
        "tax_percentage": 20,
      },
    }
  }
  order={Object {}}
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="o-checkout-cart-total u-sticky"
    >
      <div
        className="o-checkout-cart-total__wrapper"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Subtotal: 
          </dt>
          <dd>
             £
            25.00
             
          </dd>
        </dl>
        <dl
          aria-label="VAT"
        >
          <dt>
             VAT: 
          </dt>
          <dd>
             £
            0.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping: 
          </dt>
          <dd>
             
            £3.45
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="o-checkout-cart-total__total"
        >
          <dt>
             You Pay: 
          </dt>
          <dd>
             
            <b>
              £
              28.45
            </b>
             
          </dd>
          <div>
            <Button
              aria-label="Place Order"
              disabled={true}
              label="Place Order"
              onClick={undefined}
              size="lrg"
              status="disabled"
              type="button"
            >
              <button
                aria-label="Place Order"
                className="o-button o-button--disabled o-button--lrg o-button--disabled"
                disabled={true}
                onClick={undefined}
                role="button"
                tabIndex="0"
                type="button"
              >
                Place Order
              </button>
            </Button>
          </div>
        </dl>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;

exports[`renders the correct checkout cart total with multiple line items 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "price": "10.00",
          "quantity": 2,
          "title": "Test Product",
        },
        Object {
          "discount": 0,
          "price": "5.00",
          "quantity": 1,
          "title": "Pretend Product",
        },
      ],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {},
      "shippingMethod": Object {},
    }
  }
  order={Object {}}
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="o-checkout-cart-total u-sticky"
    >
      <div
        className="o-checkout-cart-total__wrapper"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Subtotal: 
          </dt>
          <dd>
             £
            25.00
             
          </dd>
        </dl>
        <dl
          aria-label="VAT"
        >
          <dt>
             VAT: 
          </dt>
          <dd>
             £
            0.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping: 
          </dt>
          <dd>
             
            Enter address
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="o-checkout-cart-total__total"
        >
          <dt>
             You Pay: 
          </dt>
          <dd>
             
            <b>
              £
              25.00
            </b>
             
          </dd>
          <div>
            <Button
              aria-label="Place Order"
              disabled={true}
              label="Place Order"
              onClick={undefined}
              size="lrg"
              status="disabled"
              type="button"
            >
              <button
                aria-label="Place Order"
                className="o-button o-button--disabled o-button--lrg o-button--disabled"
                disabled={true}
                onClick={undefined}
                role="button"
                tabIndex="0"
                type="button"
              >
                Place Order
              </button>
            </Button>
          </div>
        </dl>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;

exports[`renders the correct checkout cart total with single line item 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "imageUrl": "",
          "price": "10.00",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "Test Product",
        },
      ],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {},
    }
  }
  order={Object {}}
  title="Checkout Cart Summary"
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="o-checkout-cart-total u-sticky"
    >
      <div
        className="o-checkout-cart-total__wrapper"
      >
        <dl
          aria-label="Subtotal"
        >
          <dt>
             Subtotal: 
          </dt>
          <dd>
             £
            20.00
             
          </dd>
        </dl>
        <dl
          aria-label="VAT"
        >
          <dt>
             VAT: 
          </dt>
          <dd>
             £
            0.00
             
          </dd>
        </dl>
        <dl
          aria-label="Shipping cost"
        >
          <dt>
             Shipping: 
          </dt>
          <dd>
             
            Enter address
             
          </dd>
        </dl>
        <dl
          aria-label="Total"
          className="o-checkout-cart-total__total"
        >
          <dt>
             You Pay: 
          </dt>
          <dd>
             
            <b>
              £
              20.00
            </b>
             
          </dd>
          <div>
            <Button
              aria-label="Place Order"
              disabled={true}
              label="Place Order"
              onClick={undefined}
              size="lrg"
              status="disabled"
              type="button"
            >
              <button
                aria-label="Place Order"
                className="o-button o-button--disabled o-button--lrg o-button--disabled"
                disabled={true}
                onClick={undefined}
                role="button"
                tabIndex="0"
                type="button"
              >
                Place Order
              </button>
            </Button>
          </div>
        </dl>
      </div>
    </div>
  </Sticker>
</CheckoutCartTotal>
`;
